--- a/app/public/wp-content/themes/html5blank-stable/style.css
+++ b/app/public/wp-content/themes/html5blank-stable/style.css
@@ -251,11 +251,11 @@ a img.aligncenter {
 .bypostauthor {
 
 }
-.post_bording {
+/* .post_bording {
     border-right: 2px solid #868686;
     border-left: 2px solid #868686;
 
-}
+} */
 .title_section {
     margin-left: 35px;
 		font-size: 20px;
